Fix single post date in dark mode

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -263,6 +263,10 @@ ul {
     stroke: $color-dark;
   }
 
+  .header p.meta {
+    color: $meta-color-dark;
+  }
+
   .thoughts h2 {
     border-top: 3px solid $color-dark;
   }
